# data-structures-2k17

./: CMakeLists.txt  file.h  main.cpp  ui.cpp  ui.h
structures/: arraylist-add.cpp  arraylist-remove.cpp  arraylist.cpp  arraylist.h  heap.cpp  heap.h  linkedlist-add.cpp  linkedlist-remove.cpp  linkedlist.cpp  linkedlist.h  list.cpp  list.h  multiple-add.cpp  multiple-remove.cpp  node.cpp  node.h
